--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -81,12 +81,46 @@
  url = {https://dl.acm.org/doi/10.1145/325334.325244}
 }
 
+%%%%%%%%%%%%%%%%%%%%%%
+% Genetic Algorithms %
+%%%%%%%%%%%%%%%%%%%%%%
+
+@article{EvolutionaryDesign_Introduction,
+ author = {Bentley, Peter},
+ year = {1999},
+ month = {01},
+ title = {An Introduction to Evolutionary Design by Computers},
+ journal = {Evolutionary Design by Computers},
+ url = {https://www.researchgate.net/publication/244418116_An_Introduction_to_Evolutionary_Design_by_Computers}
+}
+
+@book{Holland,
+ author = {Holland, John H.},
+ title = {Adaptation in Natural and Artificial Systems},
+ subtitle = {An Introductory Analysis with Applications to Biology, Control and Artificial Intelligence},
+ year = {1992},
+ isbn = {0-262-08213-6},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA}
+}
+
 @thesis{JonHudson,
  author = {Hudson, Jon},
  title = {Creature Generation using Genetic Algorithms and Auto-Rigging},
  school = {Bournemouth University, National Centre for Computer Animation},
  year = {2013},
  type = {Masterarbeit}
+}
+
+@article{InteractiveEvolutionaryComputation,
+ author = {Takagi, Hideyuki},
+ year = {2001},
+ month = {10},
+ pages = {1275 - 1296},
+ title = {Interactive evolutionary computation: Fusion of the capabilities of EC optimization and human evaluation},
+ volume = {89},
+ journal = {Proceedings of the IEEE},
+ url = {https://www.researchgate.net/publication/2985886_Interactive_evolutionary_computation_Fusion_of_the_capabilities_of_EC_optimization_and_human_evaluation}
 }
 
 %%%%%%%%%%%%%
